<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.homePage.fragment.HomeFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="@dimen/margin_small"
        android:paddingEnd="@dimen/margin_small"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/noInternetMessage"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:id="@+id/shimmerLinearLayout"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="@dimen/margin_small"
        android:visibility="visible"
        android:orientation="vertical"
        >

        <include layout="@layout/card_recipe_placeholder"/>
        <include layout="@layout/card_recipe_placeholder"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="?attr/colorOnSurface"
        android:layout_gravity="top|center"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/noInternetMessage">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/cardview_light_background"
            android:text="@string/no_internet_connection" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/noRecipesLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/noRecipesImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/search_chef"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/no_recipes_found"/>

        <TextView
            android:id="@+id/noRecipesMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_recipes_message"
            android:textSize="16sp"
            android:textColor="@color/md_theme_primary"
            android:gravity="center"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>